@@ -27,12 +27,6 @@ boundaryField
         fixedFluxValue 1e-8;
         phiName        phitheta;
         value          uniform 0;
-        event (
-            (0 0)
-            (1e+6 1e-8)
-            (2e+6 -1e-8)
-            (3e+6 0)
-        );
     }
 
     bottom
