@@ -1,0 +1,8 @@
+date 0
+0 0 0 0
+date 1e+06
+0 0 0 1e-08
+date 2e+06
+0 0 0 -1e-08
+date 3e+06
+0 0 0 0
